[package]
name = "translator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
anyhow = "1.0.102"
base64 = "0.22.1"
cpal = "0.17.3"
rodio = { version = "0.22.1", features = ["playback"] }
bytemuck = "1.25.0"
http = "1.4.0"
